fixing scrollbar

--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -70,8 +70,8 @@ h2{
         white-space: nowrap;
         position: fixed;
         top: 110px;
-        right: -400px;
-        width: 400px;
+        right: -500px;
+        width: 500px;
         
         background-color: #f2f2f2;
         padding: 20px 0 0 10px ;
